src/media.css
@media only screen and (max-width: 800px) {
  #content {
    grid-template-columns: var(--sidebar-width) 1fr;
    grid-template-rows: 5rem 1fr 2fr max-content;
    grid-template-areas:
      "header header"
      "sidebar sidebar"
      "main main"
      "footer footer";
  }

  header {
    grid-template-columns: max-content max-content 1fr;
  }

  main {
    grid-row: 2/4;
    z-index: 0;
  }

  #menu-icon {
    margin-left: 0;
    visibility: visible;
  }

  #site-title {
    align-self: center;
    justify-self: center;

    color: white;
  }

  #todos {
    padding: 25px;
  }
}

